kyverno/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds: ["Pod"]
      validate:
        message: "Images tagged 'latest' are not allowed. Use an immutable, versioned tag."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
